сетка главной страницы

--- a/index.html
+++ b/index.html
@@ -11,39 +11,41 @@
   </head>
   <body class="page_body">
     <header class="main_header">
-      <nav class="main_navigation">
-        <a href="index.html" class="main_header_logo">
-          <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип нердс">
-        </a>
-        <ul class="navigation_list">
-          <li><a href="blank.html">Студия</a></li>
-          <li><a href="blank.html">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
-          <li><a href="blank.html">Контакты</a></li>
-        </ul>
-        <a href="blank.html" class="trash">Корзина</a>
-      </nav>
+      <a href="index.html" class="main_header_logo">
+        <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип нердс">
+      </a>
+      <div class="main_header_bar">
+        <nav class="main_navigation">
+          <ul class="navigation_list">
+            <li><a href="blank.html">Студия</a></li>
+            <li><a href="blank.html">Клиенты</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
+            <li><a href="blank.html">Контакты</a></li>
+          </ul>
+          <a href="blank.html" class="trash">Корзина</a>
+        </nav>
+      </div>
     </header>
     <main class="container">
       <h1>Долго, дорого, скрупулезно.</h1>
       <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
        <a class="info_nerds" href="blank.html">узнать больше</a>
       <section class="features">
-        <h2>Прайс услуг</h2>
+        <!-- <h2>Прайс услуг</h2> -->
         <ul class="features_list">
-          <li class="feature_item">
+          <li class="features_item">
             <img src="img/websites.png" width="300" height="146" alt="Веб-сайты">
             <h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <a class="button button_web" href="blank.html">Заказать</a>
           </li>
-          <li class="feature_item">
+          <li class="features_item">
             <img src="img/apps.png" width="300" height="146" alt="приложения">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложения в AppStore и Google Play</p>
             <a class="button button_app" href="blank.html">Заказать</a>
           </li>
-          <li class="feature_item">
+          <li class="features_item">
             <img src="img/presentation.png" width="300" height="146" alt="презентация">
             <h3>Презентация</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
@@ -52,21 +54,25 @@
         </ul>
       </section>
 
-<!-- ОСТАНОВОЧКА -->
-
       <section class="article">
-        <h2>Визитная карточка студии</h2>
-        <p class="article_slogan">Мы - маленькая, но гордая дизайн-студия из Краснодара.</p>
-        <p class="article_content">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-        <h3 class="article_meta">Выполняем заказы на разработку:</h3>
-        <div class="article_description">
-          <p>Веб-сайтов любой сложности</p>
-          <p>Мобильных приложения для iOS и Android</p>
-          <p >Слайдшоу и видео для корпоративных презентаций</p>
+        <!-- <h2>Визитная карточка студии</h2> -->
+        <div>
+          <div class="article_card">
+            <p class="article_slogan">Мы - маленькая, но гордая дизайн-студия из Краснодара.</p>
+            <p class="article_content">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+            <h3 class="article_meta">Выполняем заказы на разработку:</h3>
+          </div>
+          <div class="article_description">
+            <p>Веб-сайтов любой сложности</p>
+            <p>Мобильных приложения для iOS и Android</p>
+            <p >Слайдшоу и видео для корпоративных презентаций</p>
+          </div>
         </div>
         <div>
-          <img src="img/picknerds.png" width="360" height="208" alt="Логотип нердс">
-          <p>C 2004 года любим точность во всем:</p>
+          <div class="slogan_nerds">
+            <img src="img/picknerds.png" width="360" height="208" alt="Логотип нердс">
+            <p>C 2004 года любим точность во всем:</p>
+          </div>
           <ul class="skills_list">
             <li class="skills_item">
               146%
@@ -84,7 +90,7 @@
         </div>
       </section>
       <section class="firm">
-        <h2>Логотипы фирм заказавших наши услуги</h2>
+        <!-- <h2>Логотипы фирм заказавших наши услуги</h2> -->
         <ul class="firm_list">
           <li class="firm_logo">
             <img src="img/logohtml.svg" width="199" height="68" alt="Логотип академии">
@@ -107,7 +113,7 @@
     </main>
     <footer class="main_footer">
       <section class="contacts">
-        <h2>Сопособы связи с нами</h2>
+        <!-- <h2>Сопособы связи с нами</h2> -->
         <ul class="footer_social">
           <li class="social_icon">
             <img src="img/vk-icon.svg" alt="Вконтакте">
@@ -123,9 +129,11 @@
           </li>
         </ul>
       </section>
-        <h2>Скидка подписчикам</h2>
+      <div class="friend_social">
+        <!-- <h2>Скидка подписчикам</h2> -->
         <h2>Давайте дружить. это выгодно!</h2>
         <p>Скидка 10% для друзей из социальных сетей</p>
+      </div>
     </footer>
   </body>
 </html>
