--- a/catalog.html
+++ b/catalog.html
@@ -11,18 +11,18 @@
   </head>
   <body class="page_body">
     <header class="main_header">
-      <a href="index.html" class="main_header_logo">
-        <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип нердс">
-      </a>
       <div class="main_header_bar">
         <nav class="main_navigation">
+          <a href="index.html" class="main_header_logo">
+            <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип нердс">
+          </a>
           <ul class="navigation_list">
             <li><a href="blank.html">Студия</a></li>
             <li><a href="blank.html">Клиенты</a></li>
             <li><a href="catalog.html">Магазин</a></li>
             <li><a href="blank.html">Контакты</a></li>
+            <a href="blank.html" class="trash">Корзина</a>
           </ul>
-          <a href="blank.html" class="trash">Корзина</a>
         </nav>
       </div>
     </header>
@@ -77,7 +77,7 @@
             <button type="submit">Показать</button>
           </form>
       </section>
-      <div class="tovar">
+      <div class="merchandise">
       <section>
         <!-- <h2>Сортировка</h2> -->
           <ul class="filter_price">
