--- a/index.html
+++ b/index.html
@@ -21,15 +21,19 @@
             <li><a href="blank.html">Клиенты</a></li>
             <li><a href="catalog.html">Магазин</a></li>
             <li><a href="blank.html">Контакты</a></li>
-            <a href="blank.html" class="trash">Корзина</a>
           </ul>
+          <div class="trash_section">
+            <a href="blank.html" class="trash">Корзина</a>
+          </div>
         </nav>
       </div>
     </header>
     <main class="container">
-      <h1>Долго, дорого, скрупулезно.</h1>
-      <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-       <a class="info_nerds" href="blank.html">узнать больше</a>
+      <div class="slider">
+        <h1>Долго, дорого, скрупулезно.</h1>
+        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+        <a class="info_nerds" href="blank.html">узнать больше</a>
+      </div>
       <section class="features">
         <!-- <h2>Прайс услуг</h2> -->
         <ul class="features_list">
@@ -56,10 +60,10 @@
 
       <section class="article">
         <!-- <h2>Визитная карточка студии</h2> -->
-        <div>
+        <div class="article_info">
           <div class="article_card">
             <p class="article_slogan">Мы - маленькая, но гордая дизайн-студия из Краснодара.</p>
-            <p class="article_content">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+            <p class="article_content">Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br> превыше креатива. Работаем не покладая рук, как роботы.</p>
             <h3 class="article_meta">Выполняем заказы на разработку:</h3>
           </div>
           <div class="article_description">
@@ -68,7 +72,7 @@
             <p >Слайдшоу и видео для корпоративных презентаций</p>
           </div>
         </div>
-        <div>
+        <div class="article_statistic">
           <div class="slogan_nerds">
             <img src="img/picknerds.png" width="360" height="208" alt="Логотип нердс">
             <p>C 2004 года любим точность во всем:</p>
