--- a/catalog.html
+++ b/catalog.html
@@ -21,13 +21,15 @@
             <li><a href="blank.html">Клиенты</a></li>
             <li><a href="catalog.html">Магазин</a></li>
             <li><a href="blank.html">Контакты</a></li>
-            <a href="blank.html" class="trash">Корзина</a>
           </ul>
+          <div class="trash_section">
+            <a href="blank.html" class="trash">Корзина</a>
+          </div>
         </nav>
       </div>
     </header>
+    <h1 class="page_title">магазин готовых шаблонов</h1>
     <main class="container container_product">
-      <h1 class="page_title">магазин готовых шаблонов</h1>
       <div class="allcontent_product">
         <section class="filtration">
           <!-- <h2>Фильтр выборки товара</h2> -->
@@ -79,24 +81,26 @@
       </section>
       <div class="merchandise">
       <section>
-        <!-- <h2>Сортировка</h2> -->
+        <div class="sorting">
+          <h2>Сортировать:</h2>
           <ul class="filter_price">
-            <li>
-              <a href="blank.html">по цене</a>
-            </li>
-            <li>
-              <a href="blank.html">по типу</a>
-            </li>
-            <li>
-              <a href="blank.html">по названию</a>
-            </li>
-          </ul>
+              <li>
+                <a href="blank.html">по цене</a>
+              </li>
+              <li>
+                <a href="blank.html">по типу</a>
+              </li>
+              <li>
+                <a href="blank.html">по названию</a>
+              </li>
+            </ul>
+        </div>
       </section>
       <section class="catalog">
         <!-- <h2>Карточки товаров</h2> -->
           <article class="catalog_item">
             <img src="img/sedona.png" width="359" height="578" alt="Туристический сайт">
-            <div>
+            <div class="card_name">
               <h3>
                 <a class="productname" href="blank.html">Sedona</a>
               </h3>
@@ -109,7 +113,7 @@
           </article>
           <article class="catalog_item">
             <img src="img/pinkapp.png" width="359" height="578" alt="Приложения для платформ">
-            <div>
+            <div class="card_name">
               <h3>
                 <a class="productname" href="blank.html">Pink App</a>
               </h3>
@@ -121,7 +125,7 @@
           </article>
           <article class="catalog_item">
             <img src="img/barbershop.png" width="359" height="578" alt="Салон Красоты для мужчин">
-            <div>
+            <div class="card_name">
               <h3>
                 <a class="productname" href="blank.html">Barbershop</a>
               </h3>
@@ -133,7 +137,7 @@
           </article>
           <article class="catalog_item">
             <img src="img/mishka.png" width="359" height="578" alt="Вязаные игрушки">
-            <div>
+            <div class="card_name">
               <h3>
                 <a class="productname" href="blank.html">Mishka</a>
               </h3>
@@ -145,7 +149,7 @@
           </article>
           <article class="catalog_item">
             <img src="img/aplus.png" width="359" height="578" alt="Курсы повышения квалификации">
-            <div>
+            <div class="card_name">
               <h3>
                 <a class="productname" href="blank.html">A Plus</a>
               </h3>
@@ -157,7 +161,7 @@
           </article>
           <article class="catalog_item">
             <img src="img/kvas.png" width="359" height="578" alt="Крафтовый квас">
-            <div>
+            <div class="card_name">
               <h3>
                 <a class="productname" href="blank.html">КВАС</a>
               </h3>
